--- a/templates/data.html
+++ b/templates/data.html
@@ -1,41 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Data Import</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='dashboard.css') }}">
 </head>
+
 <body>
-    <div class="form-container">
-        <h2>Upload CSV for OVerview of Bank Account Balances</h2>
-        <form action="/data_overview" method="POST" enctype="multipart/form-data">
-            <div class="form-group">
-                <label for="overview">Choose CSV file:</label>
-                <input type="file" id="overview" name="overview" accept=".csv" required>
-            </div>
-            <button type="submit" class="submit-btn">Upload File</button>
-        </form>
-    </div>
-    <div class="form-container">
-        <h2>Upload CSV for Individual Transactions</h2>
-        <form action="/data_transaction" method="POST" enctype="multipart/form-data">
-            <div class="form-group">
-                <label for="transaction">Choose CSV file:</label>
-                <input type="file" id="transaction" name="transaction" accept=".csv" required>
-            </div>
-            <button type="submit" class="submit-btn">Upload File</button>
-        </form>
-    </div>
-    <div class="form-container">
-        <h2>Upload CSV for Investments</h2>
-        <form action="/data_invest" method="POST" enctype="multipart/form-data">
-            <div class="form-group">
-                <label for="invest">Choose CSV file:</label>
-                <input type="file" id="invest" name="invest" accept=".csv" required>
-            </div>
-            <button type="submit" class="submit-btn">Upload File</button>
-        </form>
-    </div>
+    <header class="dashboard-header">
+        <h1>Import Data</h1>
+        <p>Import your data from multiple sources to get the most relevant advice to you.</p>
+    </header>
+    <main class="dashboard-main">
+        <div class="form-container">
+            <h2>Upload CSV for Overview of Bank Account Balances</h2>
+            <form action="/data_overview" method="POST" enctype="multipart/form-data">
+                <div class="form-group">
+                    <label for="overview">Choose CSV file:</label>
+                    <input type="file" id="overview" name="overview" accept=".csv" required>
+                </div>
+                <button type="submit" class="submit-btn">Upload File</button>
+            </form>
+        </div>
+        <div class="form-container">
+            <h2>Upload CSV for Individual Transactions</h2>
+            <form action="/data_transaction" method="POST" enctype="multipart/form-data">
+                <div class="form-group">
+                    <label for="transaction">Choose CSV file:</label>
+                    <input type="file" id="transaction" name="transaction" accept=".csv" required>
+                </div>
+                <button type="submit" class="submit-btn">Upload File</button>
+            </form>
+        </div>
+        <div class="form-container">
+            <h2>Upload CSV for Investments</h2>
+            <form action="/data_invest" method="POST" enctype="multipart/form-data">
+                <div class="form-group">
+                    <label for="invest">Choose CSV file:</label>
+                    <input type="file" id="invest" name="invest" accept=".csv" required>
+                </div>
+                <button type="submit" class="submit-btn">Upload File</button>
+            </form>
+        </div>
+    </main>
 </body>
+
 </html>
