--- a/templates/data.html
+++ b/templates/data.html
@@ -44,6 +44,11 @@
                 <button type="submit" class="submit-btn">Upload File</button>
             </form>
         </div>
+        <div class="form-footer">
+            <a href="{{ url_for('features') }}" class="back-link">
+                <span class="back-icon">←</span> Return to Features
+            </a>
+        </div>
     </main>
 </body>
 
