--- a/templates/invest_info.html
+++ b/templates/invest_info.html
@@ -143,6 +143,11 @@
                 </td>
             </table>
         </div>
+        <div class="form-footer">
+            <a href="{{ url_for('dashboard') }}" class="back-link">
+                <span class="back-icon">←</span> Return to Dashboard
+            </a>
+        </div>
     </main>
 </body>
 
