--- a/templates/account_info.html
+++ b/templates/account_info.html
@@ -29,6 +29,11 @@
             </tr>
             {% endfor %}
         </table>
+        <div class="form-footer">
+            <a href="{{ url_for('dashboard') }}" class="back-link">
+                <span class="back-icon">←</span> Return to Dashboard
+            </a>
+        </div>
     </main>
 
 </body>
