--- a/templates/scenario_simulation.html
+++ b/templates/scenario_simulation.html
@@ -51,7 +51,8 @@
                 <div class="input-group">
                     <label for="investment-strategy">Investment Strategy</label>
                     <select id="investment-strategy" name="investment-strategy">
-                        <option value="conservative">Conservative</option>
+                        <option value="null">No Investments</option>
+                        <option value="conservative" selected>Conservative</option>
                         <option value="balanced">Balanced</option>
                         <option value="aggressive">Aggressive</option>
                     </select>
@@ -60,7 +61,8 @@
                 <div class="input-group">
                     <label for="retirement-investment-strategy">Investment Strategy After Retirement</label>
                     <select id="retirement-investment-strategy" name="retirement-investment-strategy">
-                        <option value="conservative" selected>Conservative</option>
+                        <option value="null" selected>No Investments</option>
+                        <option value="conservative">Conservative</option>
                         <option value="balanced">Balanced</option>
                         <option value="aggressive">Aggressive</option>
                     </select>
