add validation for ai_generated_adjustments

--- a/templates/ai_generated_adjustments.html
+++ b/templates/ai_generated_adjustments.html
@@ -27,27 +27,27 @@
             
             <div class="input-group">
                 <label for="income"><i class="fas fa-wallet"></i> Monthly Income (SGD)</label>
-                <input type="number" id="income" name="income" placeholder="Enter your monthly income" required>
+                <input type="number" id="income" name="income" placeholder="Enter your monthly income" required min="0">
             </div>
 
             <div class="input-group">
                 <label for="expenses"><i class="fas fa-shopping-cart"></i> Monthly Expenses (SGD)</label>
-                <input type="number" id="expenses" name="expenses" placeholder="Enter your monthly expenses" required>
+                <input type="number" id="expenses" name="expenses" placeholder="Enter your monthly expenses" required min="0">
             </div>
 
             <div class="input-group">
                 <label for="savings"><i class="fas fa-piggy-bank"></i> Current Savings (SGD)</label>
-                <input type="number" id="savings" name="savings" placeholder="Enter your current savings" required>
+                <input type="number" id="savings" name="savings" placeholder="Enter your current savings" required min="0">
             </div>
 
             <div class="input-group">
                 <label for="investments"><i class="fas fa-chart-line"></i> Current Investments (SGD)</label>
-                <input type="number" id="investments" name="investments" placeholder="Enter your current investments" required>
+                <input type="number" id="investments" name="investments" placeholder="Enter your current investments" required min="0">
             </div>
 
             <div class="input-group">
                 <label for="debt"><i class="fas fa-credit-card"></i> Total Debt (SGD)</label>
-                <input type="number" id="debt" name="debt" placeholder="Enter your total debt" required>
+                <input type="number" id="debt" name="debt" placeholder="Enter your total debt" required min="0">
             </div>
 
             <div class="input-group">
